企画もマイカレンダーに表示

--- a/templates/calendar/mycalendar.html
+++ b/templates/calendar/mycalendar.html
@@ -56,6 +56,7 @@
             padding: 0.25rem;
             margin-top: 0.25rem;
             transition: background-color 0.2s ease-in-out;
+            font-size: 0.9rem;
         }
         .calendar-event:hover {
             background-color: #dee2e6;
@@ -132,22 +133,22 @@
                                     </div>
                                 </a>
                                 {% for schedule in schedules %}
-                                    <a href="#scheduleModal{{ schedule.pk }}"
+                                    <a href="#scheduleModal-{{ schedule.pk }}"
                                        class="calendar-event-link"
                                        data-bs-toggle="modal">
                                         <div class="calendar-event">{{ schedule.summary }}</div>
                                     </a>
                                     <!-- Modal -->
                                     <div class="modal fade"
-                                         id="scheduleModal{{ schedule.pk }}"
+                                         id="scheduleModal-{{ schedule.pk }}"
                                          tabindex="-1"
-                                         aria-labelledby="scheduleModal{{ schedule.pk }}Label"
+                                         aria-labelledby="scheduleModal-{{ schedule.pk }}Label"
                                          aria-hidden="true">
                                         <div class="modal-dialog">
                                             <div class="modal-content">
                                                 <div class="modal-header">
                                                     <h5 class="modal-title"
-                                                        id="scheduleModal{{ schedule.pk }}Label">{{ schedule.summary }}</h5>
+                                                        id="scheduleModal-{{ schedule.pk }}Label">{{ schedule.summary }}</h5>
                                                     <button type="button"
                                                             class="btn-close"
                                                             data-bs-dismiss="modal"
@@ -160,11 +161,13 @@
                                                     </ul>
                                                     <div>{{ schedule.description }}</div>
                                                 </div>
-                                                <div class="modal-footer">
-                                                    <a href="{% url 'calendar:delete' schedule.pk %}"
-                                                       class="btn btn-danger">削除</a>
-                                                    <!--TODO: 編集画面も実装する-->
-                                                </div>
+                                                {% if not schedule.no_delete %}
+                                                    <div class="modal-footer">
+                                                        <a href="{% url 'calendar:delete' schedule.pk %}"
+                                                           class="btn btn-danger">削除</a>
+                                                        <!--TODO: 編集画面も実装する-->
+                                                    </div>
+                                                {% endif %}
                                             </div>
                                         </div>
                                     </div>
