--- a/templates/base.html
+++ b/templates/base.html
@@ -46,16 +46,6 @@
                      id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            {% if request.path == '/' %}
-                                <a class="nav-link active"
-                                   aria-current="page"
-                                   href="{% url 'home' %}">ホーム</a>
-                            {% else %}
-                                <a class="nav-link"
-                                   href="{% url 'home' %}">ホーム</a>
-                            {% endif %}
-                        </li>
-                        <li class="nav-item">
                             {% if request.path|startswith:'/events/' %}
                                 <a class="nav-link active"
                                    aria-current="page"
@@ -75,25 +65,26 @@
                                    href="{% url 'schools:' %}">学校</a>
                             {% endif %}
                         </li>
-                        <li class="nav-item">
-                            {% if request.path|startswith:'/accounts/' %}
-                                <a class="nav-link active"
-                                   aria-current="page"
-                                   href="{% url 'accounts:' %}">アカウント</a>
-                            {% else %}
-                                <a class="nav-link"
-                                   href="{% url 'accounts:' %}">アカウント</a>
-                            {% endif %}
-                        </li>
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle"
-                               href="#"
-                               id="navbarCalendar"
-                               role="button"
-                               data-bs-toggle="dropdown"
-                               aria-expanded="false">
-                                カレンダー
-                            </a>
+                            {% if request.path|startswith:'/calendar/' %}
+                                <a class="nav-link dropdown-toggle active"
+                                   href="#"
+                                   id="navbarCalendar"
+                                   role="button"
+                                   data-bs-toggle="dropdown"
+                                   aria-expanded="false">
+                                    カレンダー
+                                </a>
+                            {% else %}
+                                <a class="nav-link dropdown-toggle"
+                                   href="#"
+                                   id="navbarCalendar"
+                                   role="button"
+                                   data-bs-toggle="dropdown"
+                                   aria-expanded="false">
+                                    カレンダー
+                                </a>
+                            {% endif %}
                             <ul class="dropdown-menu dropdown-menu-dark"
                                 aria-labelledby="navbarCalendar">
                                 <li>
