--- a/templates/calendar/mycalendar.html
+++ b/templates/calendar/mycalendar.html
@@ -83,9 +83,7 @@
 {% block content %}
     {{ block.super }}
     <div class="row">
-        <div class="col-md-2">
-            スペース
-        </div>
+        <div class="col-md-2">スペース</div>
         <div class="col-md-10">
             <div class="d-flex justify-content-between mb-3">
                 <h4 class="mb-0">{{ month_current | date:"Y年m月" }}</h4>
