--- a/templates/contact/contact_list.html
+++ b/templates/contact/contact_list.html
@@ -13,7 +13,7 @@
 {% block content %}
     <a href="{% url 'contact:contact_create' %}">新規作成</a>
     {% for contact in object_list %}
-        <a href="{% url 'contact:thread' contact.pk %}">{{ contact.person }}</a>
+        <a href="{% url 'contact:thread' contact.pk %}">{{ contact.person }}{{ contact.last_posted }}</a>
     {% endfor %}
     {% if object_list|length > 10 %}
 
