--- a/templates/contact/contact_thread.html
+++ b/templates/contact/contact_thread.html
@@ -15,6 +15,9 @@
         .message > p:last-child {
             margin-bottom: 0;
         }
+        #toc {
+            width: fit-content;
+        }
     </style>
 {% endblock head %}
 {% block breadcrumbs %}
@@ -32,13 +35,19 @@
         <a href="{% url 'contact:contact_update' object.pk %}"
            class="btn btn-secondary">編集</a>
     </div>
+    <div class="list-group mb-4"
+         id="toc">
+        {% for contact in contact_items %}
+            <a href="#contact-header-{{ contact.pk }}"
+               class="list-group-item list-group-item-action">{{ contact.date|date:"m/d" }}　{{ contact.sender }} → {{ contact.recipient }}</a>
+        {% endfor %}
+    </div>
     {% for contact in contact_items %}
-        <h2 class="fs-5 border-bottom py-2 mb-3">
+        <h2 class="fs-5 border-bottom py-2 mb-3"
+            id="contact-header-{{ contact.pk }}">
             {{ contact.date|date:"m/d" }}　{{ contact.sender }} → {{ contact.recipient }}
         </h2>
-        {% if contact.summary %}
-            {{ contact.summary|md_to_html }}
-        {% endif %}
+        {% if contact.summary %}{{ contact.summary|md_to_html }}{% endif %}
         <div class="bg-light border rounded p-2 message mb-1">{{ contact.text|linebreaks }}</div>
         <div class="d-flex justify-content-between">
             <div>
