--- a/templates/contact/contact_list.html
+++ b/templates/contact/contact_list.html
@@ -11,10 +11,24 @@
     {{ block.super }}
 {% endblock breadcrumbs %}
 {% block content %}
-    <a href="{% url 'contact:thread_create' %}">新規作成</a>
-    {% for contact in object_list %}
-        <a href="{% url 'contact:thread' contact.pk %}">{{ contact.person }}{{ contact.last_posted }}</a>
-    {% endfor %}
+    <a class="btn btn-primary mb-3"
+       href="{% url 'contact:thread_create' %}">新規作成</a>
+    <table class="table">
+        <tbody>
+            <tr>
+                <th>スレッド</th>
+                <th>最終投稿日時</th>
+            </tr>
+            {% for thread in object_list %}
+                <tr>
+                    <td>
+                        <a href="{% url 'contact:thread' thread.pk %}">{{ thread.person }}</a>
+                    </td>
+                    <td>{{ thread.last_posted|date:"Y年m月d日" }}</td>
+                </tr>
+            {% endfor %}
+        </tbody>
+    </table>
     {% if object_list|length > 10 %}
 
         {% include "components/pagination.html" %}
