連絡共有へのリンクを企画appホームに追加

--- a/templates/events/index.html
+++ b/templates/events/index.html
@@ -36,5 +36,11 @@
                 <div>出欠掲示板</div>
             </a>
         </div>
+        <div class="col-sm-6">
+            <a href="{% url 'contact:' %}"
+               class="btn btn-outline-dark d-flex flex-column py-3 mb-3">
+                <div>連絡共有</div>
+            </a>
+        </div>
     </div>
 {% endblock content %}
