--- a/templates/contact/base.html
+++ b/templates/contact/base.html
@@ -9,7 +9,7 @@
 {% endblock title %}
 {% block breadcrumbs %}
     {{ block.super }}
-    {% breadcrumb "連絡" "contact:" %}
+    {% breadcrumb "連絡共有" "contact:" %}
 {% endblock breadcrumbs %}
 {% block content %}
 {% endblock content %}
