--- a/templates/accounts/password_change.html
+++ b/templates/accounts/password_change.html
@@ -5,8 +5,9 @@
 {% load django_bootstrap_breadcrumbs %}
 {% load django_bootstrap5 %}
 
-{% block customcss %}
-{% endblock customcss %}
+{% block title %}
+    パスワード変更 - {{ block.super }}
+{% endblock title %}
 {% block breadcrumbs %}
     {{ block.super }}
     {% breadcrumb "パスワード変更" "accounts:password_change" %}
