--- a/templates/accountings/delete_bill.html
+++ b/templates/accountings/delete_bill.html
@@ -5,6 +5,9 @@
 {% load django_bootstrap_breadcrumbs %}
 {% load django_bootstrap5 %}
 
+{% block title %}
+    請求書削除 - {{ block.super }}
+{% endblock title %}
 {% block breadcrumbs %}
     {{ block.super }}
     {% breadcrumb event.name "events:event_detail" event.id %}
