--- a/templates/accounts/group/list.html
+++ b/templates/accounts/group/list.html
@@ -4,8 +4,9 @@
 
 {% load django_bootstrap_breadcrumbs %}
 
-{% block customcss %}
-{% endblock customcss %}
+{% block title %}
+    班 - {{ block.super }}
+{% endblock title %}
 {% block breadcrumbs %}
     {{ block.super }}
     {% breadcrumb "班" "accounts:group" %}
