--- a/templates/accounts/user/import.html
+++ b/templates/accounts/user/import.html
@@ -5,8 +5,9 @@
 {% load django_bootstrap5 %}
 {% load static %}
 
-{% block customcss %}
-{% endblock customcss %}
+{% block title %}
+    ユーザー一括登録 - {{ block.super }}
+{% endblock title %}
 {% block breadcrumbs %}
     {{ block.super }}
     {% breadcrumb "ユーザー一覧" "accounts:users" %}
