--- a/templates/calendar/integration.html
+++ b/templates/calendar/integration.html
@@ -5,8 +5,9 @@
 {% load django_bootstrap_breadcrumbs %}
 {% load django_bootstrap5 %}
 
-{% block head %}
-{% endblock head %}
+{% block title %}
+    カレンダー照会 - {{ block.super }}
+{% endblock title %}
 {% block breadcrumbs %}
     {{ block.super }}
 {% endblock breadcrumbs %}
