--- a/templates/events/cancel_invitation.html
+++ b/templates/events/cancel_invitation.html
@@ -5,8 +5,9 @@
 {% load django_bootstrap_breadcrumbs %}
 {% load django_bootstrap5 %}
 
-{% block customcss %}
-{% endblock customcss %}
+{% block title %}
+    打診取り消し - {{ block.super }}
+{% endblock title %}
 {% block breadcrumbs %}
     {{ block.super }}
     {% breadcrumb object.event "events:event_detail" object.event.id %}
