--- a/templates/events/index.html
+++ b/templates/events/index.html
@@ -2,6 +2,9 @@
 
 {% load static %}
 
+{% block title %}
+    企画 - {{ block.super }}
+{% endblock title %}
 {% block head %}
     <link rel="stylesheet"
           href="{% static 'events/badge.css' %}"/>
