--- a/templates/events/make_invitation.html
+++ b/templates/events/make_invitation.html
@@ -5,6 +5,9 @@
 {% load django_bootstrap_breadcrumbs %}
 {% load django_bootstrap5 %}
 
+{% block title %}
+    打診 - {{ block.super }}
+{% endblock title %}
 {% block head %}
     <link rel="stylesheet"
           href="{% static 'utils/css/suggest.css' %}"/>
