--- a/templates/recruitments/list.html
+++ b/templates/recruitments/list.html
@@ -5,6 +5,9 @@
 {% load django_bootstrap5 %}
 {% load django_bootstrap_breadcrumbs %}
 
+{% block title %}
+    出欠一覧 - {{ block.super }}
+{% endblock title %}
 {% block head %}
     <script src="https://cdn.jsdelivr.net/combine/npm/jquery@3.6.1,npm/tablesorter@2.31.3/dist/js/jquery.tablesorter.min.js"></script>
     <script>
@@ -79,7 +82,9 @@
                      role="tabpanel"
                      aria-labelledby="{{ option.0 }}-tab">
                     <table class="table sort"
-                           {% if is_admin %} id="row-input"{% endif %}>
+                           {% if is_admin %}
+                               id="row-input"
+                           {% endif %}>
                         <thead>
                             <tr>
                                 <th scope="col">氏名</th>
