--- a/templates/reflections/edit_template.html
+++ b/templates/reflections/edit_template.html
@@ -5,6 +5,9 @@
 {% load django_bootstrap5 %}
 {% load django_bootstrap_breadcrumbs %}
 
+{% block title %}
+    振り返りテンプレート - {{ block.super }}
+{% endblock title %}
 {% block head %}
     <link rel="stylesheet"
           href="{% static 'events/reflection_md.css' %}"/>
