--- a/templates/schools/db_update.html
+++ b/templates/schools/db_update.html
@@ -5,6 +5,9 @@
 {% load django_bootstrap5 %}
 {% load static %}
 
+{% block title %}
+    学校データベース更新 - {{ block.super }}
+{% endblock title %}
 {% block head %}
 {% endblock head %}
 {% block breadcrumbs %}
